compiler/typ/tests/fixtures/diagnostics/0771_polyvar_call_payload_mismatch_02.ml.infer.expected
File "0771_polyvar_call_payload_mismatch_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0771_polyvar_call_payload_mismatch_02 is not a valid module name.

File "0771_polyvar_call_payload_mismatch_02.ml", line 4, characters 22-26:
4 | let _ = read_beta (`A true)
                          ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
